--- a/frontend/apps/business/api-spec/tsp-output/schema/openapi.yaml
+++ b/frontend/apps/business/api-spec/tsp-output/schema/openapi.yaml
@@ -99,11 +99,65 @@ paths:
           multipart/form-data:
             schema:
               $ref: '#/components/schemas/CompanySignUpInput'
-  /company-products:
+  /company-products/:
+    get:
+      operationId: get-company-products
+      summary: Fetch CompanyProducts
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CompanyProduct'
+        '500':
+          description: Server error
+      tags:
+        - CompanyProduct
+      security:
+        - BusinessBearerAuth: []
+    post:
+      operationId: post-company-product
+      summary: Create CompanyProduct
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyProductUpdateResponse'
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyProductUpdateResponse'
+        '500':
+          description: Server error
+      tags:
+        - CompanyProduct
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/CompanyProductUpdateInput'
+      security:
+        - BusinessBearerAuth: []
+  /company-products/{id}:
     get:
       operationId: get-company-product
       summary: Show CompanyProduct
-      parameters: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: The request has succeeded.
@@ -122,7 +176,12 @@ paths:
     put:
       operationId: put-company-product
       summary: Update CompanyProduct
-      parameters: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: The request has succeeded.
@@ -148,6 +207,30 @@ paths:
           multipart/form-data:
             schema:
               $ref: '#/components/schemas/CompanyProductUpdateInput'
+      security:
+        - BusinessBearerAuth: []
+    delete:
+      operationId: delete-company-product
+      summary: Delete CompanyProduct
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyProduct'
+        '404':
+          description: The server cannot find the requested resource.
+        '500':
+          description: Server error
+      tags:
+        - CompanyProduct
       security:
         - BusinessBearerAuth: []
   /company-stories:
