Business CompanyProductのスキーマにid追加

--- a/frontend/apps/business/api-spec/tsp-output/schema/openapi.yaml
+++ b/frontend/apps/business/api-spec/tsp-output/schema/openapi.yaml
@@ -356,10 +356,13 @@ components:
     CompanyProduct:
       type: object
       required:
+        - id
         - name
         - description
         - url
       properties:
+        id:
+          type: string
         name:
           type: string
         description:
